dataset1235/2025-2/805158916/users/1639372129/executions/2651470117_1078076002.log
== SUBMISSION (2025-08-27 03:02:42)
-- CODE: 
x = input(1.23)
print(x)
        
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.231.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.231.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:02:27)
-- CODE: 
x = input(1.23)
print(x)
        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.231.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.231.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:02:18)
-- CODE: 
x = input(1.23)
print(x)
        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.231.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.231.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:56:23)
-- CODE: 
x 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
